k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pw-crud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pw-crud
  template:
    spec:
      containers:
      - name: pw-crud
        image: pw/crudservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 100m
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
        - name: config-volume
          configMap:
            name: redis-config
