k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pw-crud
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: pw-crud
